bk_ida/bzip2ida/c2/addFlagsFromEnvVar
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/addFlagsFromEnvVar/src/bzip2.c:2430:18: error: expected expression
v19 = *( _OWORD *)&v4[v17 + 17]; 
                 ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/addFlagsFromEnvVar/src/bzip2.c:2430:10: error: use of undeclared identifier '_OWORD'
v19 = *( _OWORD *)&v4[v17 + 17]; 
         ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/addFlagsFromEnvVar/src/bzip2.c:2431:12: error: expected expression
*( _OWORD *)( v17 + 6408849) = *( _OWORD *)&v4[v17 + 1]; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/addFlagsFromEnvVar/src/bzip2.c:2431:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v17 + 6408849) = *( _OWORD *)&v4[v17 + 1]; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/addFlagsFromEnvVar/src/bzip2.c:2431:43: error: expected expression
*( _OWORD *)( v17 + 6408849) = *( _OWORD *)&v4[v17 + 1]; 
                                          ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/addFlagsFromEnvVar/src/bzip2.c:2431:35: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v17 + 6408849) = *( _OWORD *)&v4[v17 + 1]; 
                                  ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/addFlagsFromEnvVar/src/bzip2.c:2432:12: error: expected expression
*( _OWORD *)( v17 + 6408865) = v19; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/addFlagsFromEnvVar/src/bzip2.c:2432:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v17 + 6408865) = v19; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/addFlagsFromEnvVar/src/bzip2.c:2433:18: error: expected expression
v20 = *( _OWORD *)&v4[v17 + 49]; 
                 ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/addFlagsFromEnvVar/src/bzip2.c:2433:10: error: use of undeclared identifier '_OWORD'
v20 = *( _OWORD *)&v4[v17 + 49]; 
         ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/addFlagsFromEnvVar/src/bzip2.c:2434:12: error: expected expression
*( _OWORD *)( v17 + 6408881) = *( _OWORD *)&v4[v17 + 33]; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/addFlagsFromEnvVar/src/bzip2.c:2434:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v17 + 6408881) = *( _OWORD *)&v4[v17 + 33]; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/addFlagsFromEnvVar/src/bzip2.c:2434:43: error: expected expression
*( _OWORD *)( v17 + 6408881) = *( _OWORD *)&v4[v17 + 33]; 
                                          ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/addFlagsFromEnvVar/src/bzip2.c:2434:35: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v17 + 6408881) = *( _OWORD *)&v4[v17 + 33]; 
                                  ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/addFlagsFromEnvVar/src/bzip2.c:2435:12: error: expected expression
*( _OWORD *)( v17 + 6408897) = v20; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/addFlagsFromEnvVar/src/bzip2.c:2435:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v17 + 6408897) = v20; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/addFlagsFromEnvVar/src/bzip2.c:2436:18: error: expected expression
v21 = *( _OWORD *)&v4[v17 + 81]; 
                 ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/addFlagsFromEnvVar/src/bzip2.c:2436:10: error: use of undeclared identifier '_OWORD'
v21 = *( _OWORD *)&v4[v17 + 81]; 
         ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/addFlagsFromEnvVar/src/bzip2.c:2437:12: error: expected expression
*( _OWORD *)( v17 + 6408913) = *( _OWORD *)&v4[v17 + 65]; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/addFlagsFromEnvVar/src/bzip2.c:2437:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v17 + 6408913) = *( _OWORD *)&v4[v17 + 65]; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/addFlagsFromEnvVar/src/bzip2.c:2437:43: error: expected expression
*( _OWORD *)( v17 + 6408913) = *( _OWORD *)&v4[v17 + 65]; 
                                          ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/addFlagsFromEnvVar/src/bzip2.c:2437:35: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v17 + 6408913) = *( _OWORD *)&v4[v17 + 65]; 
                                  ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/addFlagsFromEnvVar/src/bzip2.c:2438:12: error: expected expression
*( _OWORD *)( v17 + 6408929) = v21; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/addFlagsFromEnvVar/src/bzip2.c:2438:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v17 + 6408929) = v21; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/addFlagsFromEnvVar/src/bzip2.c:2439:18: error: expected expression
v22 = *( _OWORD *)&v4[v17 + 113]; 
                 ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/addFlagsFromEnvVar/src/bzip2.c:2439:10: error: use of undeclared identifier '_OWORD'
v22 = *( _OWORD *)&v4[v17 + 113]; 
         ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/addFlagsFromEnvVar/src/bzip2.c:2440:12: error: expected expression
*( _OWORD *)( v17 + 6408945) = *( _OWORD *)&v4[v17 + 97]; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/addFlagsFromEnvVar/src/bzip2.c:2440:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v17 + 6408945) = *( _OWORD *)&v4[v17 + 97]; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/addFlagsFromEnvVar/src/bzip2.c:2440:43: error: expected expression
*( _OWORD *)( v17 + 6408945) = *( _OWORD *)&v4[v17 + 97]; 
                                          ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/addFlagsFromEnvVar/src/bzip2.c:2440:35: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v17 + 6408945) = *( _OWORD *)&v4[v17 + 97]; 
                                  ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/addFlagsFromEnvVar/src/bzip2.c:2441:12: error: expected expression
*( _OWORD *)( v17 + 6408961) = v22; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/addFlagsFromEnvVar/src/bzip2.c:2441:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v17 + 6408961) = v22; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/addFlagsFromEnvVar/src/bzip2.c:2457:18: error: expected expression
v25 = *( _OWORD *)&v4[( v17 | 1) + 16]; 
                 ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/addFlagsFromEnvVar/src/bzip2.c:2457:10: error: use of undeclared identifier '_OWORD'
v25 = *( _OWORD *)&v4[( v17 | 1) + 16]; 
         ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/addFlagsFromEnvVar/src/bzip2.c:2458:12: error: expected expression
*( _OWORD *)&tmpName[v24] = *( _OWORD *)&v4[v17 | 1]; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/addFlagsFromEnvVar/src/bzip2.c:2458:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&tmpName[v24] = *( _OWORD *)&v4[v17 | 1]; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/addFlagsFromEnvVar/src/bzip2.c:2458:40: error: expected expression
*( _OWORD *)&tmpName[v24] = *( _OWORD *)&v4[v17 | 1]; 
                                       ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/addFlagsFromEnvVar/src/bzip2.c:2458:32: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&tmpName[v24] = *( _OWORD *)&v4[v17 | 1]; 
                               ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/addFlagsFromEnvVar/src/bzip2.c:2459:12: error: expected expression
*( _OWORD *)( v24 + 6408864) = v25; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/addFlagsFromEnvVar/src/bzip2.c:2459:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v24 + 6408864) = v25; 
   ^
40 errors generated.
make: *** [/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/addFlagsFromEnvVar/src/obj/bzip2.o] Error 1
